# swikn-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile
backend/: Cargo.toml
backend/src/: swikn-server.rs
backend/static/: index.html
backend/templates/: base.html  index.html
frontend/: Cargo.toml
frontend/src/: lib.rs
swikn/: Cargo.toml
swikn/src/: html.rs  lib.rs  tools.rs
swikn/templates/: base.html  tool.html  tools.html
