[workspace]
members = ["frontend", "backend", 'swikn']
resolver = '2'

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alexandru Cojocaru <hi@xojoc.pw>"]
description = ''
documentation = ''

[profile.release]
lto = true
# opt-level = "s"

[profile.release.package.frontend]
opt-level = "s"
# lto = true

