[package]
name = "swikn-frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true


[lib]
crate-type = ["cdylib"]


[features]
default = ["console_error_panic_hook"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0"
wee_alloc = { version = "^0", optional = true }
serde_json = '^1'
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "^0", optional = true }
swikn = { path = "../swikn" }

[dependencies.web-sys]
version = "^0"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlTextAreaElement',
  'Node',
  'Window'
]

[dev-dependencies]
wasm-bindgen-test = "^0"

[profile.release]
opt-level = "s"
